align fix

--- a/gou_css/gou_titleleft.css
+++ b/gou_css/gou_titleleft.css
@@ -1,15 +1,16 @@
 .gou_titleleft {
     display: flex;
     justify-content: space-between;
-    padding: 10rem 15vw;
+    align-items: center;
+    padding: 5rem 15vw;
   }
   
-  .gou_titleleft  .left {
+.gou_titleleft  .left {
     width: 50%;
     padding: 15px;
   }
   
-  .gou_titleleft .right {
+.gou_titleleft .right {
     width: 50%;
     padding: 15px;
     display: flex;
@@ -17,19 +18,19 @@
     align-items: center;
   }
   
-  .gou_titleleft h1 {
+.gou_titleleft h1 {
     font-size: 2rem;
     margin-bottom: 1px;
   }
   
-  .gou_titleleft .subtitle {
+.gou_titleleft .subtitle {
     font-size: 1rem;
     font-weight: 400;
     margin-bottom: 2rem;
   }
   
-  .gou_titleleft a,
-  .gou_titleleft a:visited{
+.gou_titleleft a,
+.gou_titleleft a:visited{
     border: 2px solid white;
     padding: 1rem 4rem;
     border-radius: 30px;
@@ -37,23 +38,21 @@
     transition: 0.6s;
   }
 
-  .gou_titleleft a:focus,
-    .gou_titleleft a:hover{
+.gou_titleleft a:focus,
+.gou_titleleft a:hover{
 
     color: white;
     background-color: rgb(150, 23, 23);
     border: 2px solid  rgb(150, 23, 23);
     padding: 1rem 4rem;
-}
-
-
-  
-  
-  .gou_titleleft .image-box {
+  }
+ 
+.gou_titleleft .image-box {
     border: 2px solid #000;
     max-width: 100%;
   }
   
+
   @media (max-width: 700px) {
     .gou_titleleft {
       flex-direction: column;
